<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.smooks.examples</groupId>
    <artifactId>smooks-examples</artifactId>
    <version>3-SNAPSHOT</version>
    <packaging>pom</packaging>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <smooks.version>2.0.0-RC5-SNAPSHOT</smooks.version>
        <smooks.edifact.cartridge.version>2.0.0-RC4</smooks.edifact.cartridge.version>
        <maven.compiler.target>1.8</maven.compiler.target>
        <maven.compiler.source>1.8</maven.compiler.source>
    </properties>

    <profiles>
        <profile>
            <id>post-java-8</id>
            <activation>
                <jdk>[9,)</jdk>
            </activation>
            <properties>
                <maven.compiler.release>8</maven.compiler.release>
            </properties>
        </profile>
    </profiles>

    <modules>
        <module>camel</module>
        <module>csv-to-java</module>
        <module>csv-to-java-programmatic</module>
        <module>csv-to-xml</module>
        <module>csv-to-xml-2</module>
        <module>csv-variable-record</module>
        <module>dao-router</module>
        <module>db-extract-transform-load</module>
        <module>drools-fusion</module>
        <module>dynamic-model-builder</module>
        <module>edi-to-xml</module>
        <module>edi-to-java</module>
        <module>edi-to-java-to-edi</module>
        <module>edi-with-import-to-java</module>
        <module>edifact-to-java</module>
        <module>edifact-to-xml</module>
        <module>file-router</module>
        <module>fixed-length-to-java</module>
        <module>flatfile-to-xml-regex</module>
        <module>freemarker-huge-transform</module>
        <module>groovy</module>
        <module>java-basic</module>
        <module>java-to-edifact</module>
        <module>java-to-edifact-programmatic</module>
        <module>java-to-java</module>
        <module>java-to-xml</module>
        <module>jms-router</module>
        <module>json-to-java</module>
        <module>model-driven-basic</module>
        <module>model-driven-basic-virtual</module>
        <module>osgi</module>
        <module>profiling</module>
        <module>sj-testimonial</module>
        <module>validation-basic</module>
        <module>xml-read-write</module>
        <module>xml-read-write-transform</module>
        <module>xml-to-edi</module>
        <module>xml-to-java</module>
        <module>xml-to-java-virtual</module>
        <module>xslt-basic</module>
        <module>xslt-groovy</module>
        <module>xslt-namespaces</module>
        <module>yaml-to-java</module>
        <module>pipelines</module>
        <module>cross-domain-solution</module>
    </modules>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.smooks</groupId>
                <artifactId>smooks-bom</artifactId>
                <version>${smooks.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.xmlunit</groupId>
                <artifactId>xmlunit-core</artifactId>
                <version>2.10.0</version>
            </dependency>
            <dependency>
                <groupId>org.hsqldb</groupId>
                <artifactId>hsqldb</artifactId>
                <version>2.7.3</version>
            </dependency>
            <dependency>
                <groupId>xalan</groupId>
                <artifactId>xalan</artifactId>
                <version>2.7.3</version>
            </dependency>
            <dependency>
                <groupId>org.glassfish.jaxb</groupId>
                <artifactId>jaxb-runtime</artifactId>
                <version>4.0.5</version>
            </dependency>
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter-engine</artifactId>
                <version>5.10.3</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.mockito</groupId>
                <artifactId>mockito-core</artifactId>
                <version>5.12.0</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.ops4j</groupId>
                    <artifactId>maven-pax-plugin</artifactId>
                    <version>1.6.0</version>
                </plugin>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>exec-maven-plugin</artifactId>
                    <version>3.4.1</version>
                    <executions>
                        <execution>
                            <goals>
                                <goal>java</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                    <version>3.3.2</version>
                    <executions>
                        <execution>
                            <goals>
                                <goal>repackage</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
                <version>3.4.1</version>
                <executions>
                    <execution>
                        <id>enforce</id>
                        <configuration>
                            <rules>
                                <requireReleaseDeps>
                                    <onlyWhenRelease>true</onlyWhenRelease>
                                    <message>No Snapshots Allowed!</message>
                                </requireReleaseDeps>
                                <bannedDependencies>
                                    <excludes>
                                        <exclude>org.slf4j:slf4j-api:[1,2]</exclude>
                                    </excludes>
                                </bannedDependencies>
                                <requireJavaVersion>
                                    <version>17</version>
                                </requireJavaVersion>
                            </rules>
                        </configuration>
                        <goals>
                            <goal>enforce</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>license-maven-plugin</artifactId>
                <version>2.4.0</version>
                <configuration>
                    <verbose>false</verbose>
                    <addJavaLicenseAfterPackage>false</addJavaLicenseAfterPackage>
                    <canUpdateDescription>false</canUpdateDescription>
                    <licenseName>lgpl_v3_apache_v2</licenseName>
                    <licenseResolver>file://${project.basedir}/license</licenseResolver>
                    <inceptionYear>2020</inceptionYear>
                    <organizationName>Smooks</organizationName>
                    <processStartTag>========================LICENSE_START=================================</processStartTag>
                    <processEndTag>=========================LICENSE_END==================================</processEndTag>
                    <excludes>
                        <exclude>drools-fusion</exclude>
                    </excludes>
                </configuration>
                <executions>
                    <execution>
                        <id>update-file-header</id>
                        <goals>
                            <goal>update-file-header</goal>
                        </goals>
                        <phase>process-sources</phase>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.felix</groupId>
                <artifactId>maven-bundle-plugin</artifactId>
                <version>5.1.9</version>
                <extensions>true</extensions>
                <inherited>true</inherited>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.3.1</version>
                <configuration>
                    <trimStackTrace>false</trimStackTrace>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>3.4.1</version>
                <configuration>
                    <executable>java</executable>
                    <arguments>
                        <argument>-jar</argument>
                        <argument>${basedir}/target/${project.artifactId}-${project.version}.jar</argument>
                    </arguments>
                </configuration>
            </plugin>
        </plugins>
    </build>


    <dependencies>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-slf4j2-impl</artifactId>
            <version>2.23.1</version>
        </dependency>
    </dependencies>

    <repositories>
        <repository>
            <id>oss.sonatype.org-snapshot</id>
            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
            <releases>
                <enabled>false</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
    </repositories>
</project>
